--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Portfolio | Robert Jimenez</title>
-    </head>
-    <header class="header">
-        <h1>Robert Jimenez</h1>
-        <nav class="nav">
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#Resume">Resume</a></li>
-                <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Contact Me">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <head>
+            <meta charset="UTF-8" />
+            <link rel="stylesheet" href="./assets/css/style.css" />
+            <title>Portfolio | Robert Jimenez</title>
+        </head>
+        <header class="header">
+            <h1>Robert Jimenez</h1>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact-me">Contact Me</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="content">
+            <section id="hero">
+                <h2>Thanks for stopping bye!</h2>
+            </section>
+            <section id="about-me">
+                <h2>About Me</h2>
+            </section>
+            <section id="resume">
+                <h2>Resume</h2>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+            </section>
+            <section id="contact-me">
+                <h2>Contact Me</h2>
+            </section>
+        </section>
+    </body>
 </html>
