header CSS and text, changed color scheme variables

--- a/index.html
+++ b/index.html
@@ -19,17 +19,26 @@
         </header>
         <section class="content">
             <section id="hero">
-                <h2>Thanks for stopping bye!</h2>
+                <div>
+                    <h2>Hello, my name is <span>Robert Jimenez</span></h2>
+                    <h2>and I'm a web developer.</h2>
+                </div>
             </section>
+
             <section id="about-me">
                 <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
             </section>
+
             <section id="resume">
                 <h2>Resume</h2>
             </section>
+            
             <section id="projects">
                 <h2>Projects</h2>
             </section>
+
             <section id="contact-me">
                 <h2>Contact Me</h2>
             </section>
