--- a/index.html
+++ b/index.html
@@ -18,28 +18,32 @@
             </nav>
         </header>
         <section class="content">
-            <section id="hero">
+            <section id="hero" class="hero">
                 <div>
                     <h2>Hello, my name is <span>Robert Jimenez</span></h2>
                     <h2>and I'm a web developer.</h2>
                 </div>
             </section>
 
-            <section id="about-me">
+            <section id="about-me" class="about-me">
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                <div class="about-me-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                </div>
+                
             </section>
 
-            <section id="resume">
+            <section id="resume" class="resume">
                 <h2>Resume</h2>
             </section>
             
-            <section id="projects">
+            <section id="projects" class="projects">
                 <h2>Projects</h2>
             </section>
 
-            <section id="contact-me">
+            <section id="contact-me" class="contact-me">
                 <h2>Contact Me</h2>
             </section>
         </section>
