update styles for resume section, add education and technologies lists

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section class="content">
             <section id="hero" class="hero">
                 <div>
-                    <h2>Hello, my name is <span>Robert Jimenez</span></h2>
-                    <h2>and I'm a web developer.</h2>
+                    <h2>Hi, my name is <span>Robert Jimenez</span>.</h2>
+                    <h2>I'm a web developer.</h2>
                 </div>
             </section>
 
@@ -37,6 +37,23 @@
 
             <section id="resume" class="resume">
                 <h2>Resume</h2>
+                <div class="resume-details">
+                    <div class="resume-half">
+                        <h3>Education</h3>
+                        <ul>
+                            <li>Full-stack Web Dev Bootcamp (Rice '22)</li>
+                            <li>BS Mechanical Engineering (UT-Austin '11)</li>
+                        </ul>    
+                    </div>
+                    <div class="resume-half">
+                        <h3>Technologies</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>   
+                    </div>                   
+                </div>
             </section>
             
             <section id="projects" class="projects">
