--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </header>
         <section class="content">
             <section id="hero" class="hero">
+                <div class="hero-image">
+                    <img src="./assets/images/cartoon-robert.jpg" alt="robert with a crown" />
+                </div>
+                
                 <div>
                     <h2>Hi, my name is <span>Robert Jimenez</span>.</h2>
                     <h2>I'm a web developer.</h2>
@@ -58,6 +62,17 @@
             
             <section id="projects" class="projects">
                 <h2>Projects</h2>
+                <div class="project-cards">
+                    <div class="main-card">
+                        <img src="./assets/images/run-buddy-still.jpg" />
+                    </div>
+                    <div class="small-card-container">
+                            <img src="./assets/images/run-buddy-still-blue.jpg" />
+                            <img src="./assets/images/run-buddy-still-green.jpg" />
+                            <img src="./assets/images/run-buddy-still-red.jpg" />
+                            <img src="./assets/images/run-buddy-still-dark.jpg" />                        
+                    </div>
+                </div>
             </section>
 
             <section id="contact-me" class="contact-me">
