--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
 
             <section id="contact-me" class="contact-me">
                 <h2>Contact Me</h2>
+                <div class="contact-container">
+                    <a href="mailto:RJimenezTech@gmail.com" class="contact-cards" alt="email icon">
+                        <img src="./assets/images/email-icon.png" />
+                        <h4>Email me</h4>
+                    </a>
+                    <a href="https://github.com/RJimenezTech" class="contact-cards" alt="github cat icon">
+                        <img src="./assets/images/github-cat-icon.png" />
+                        <h4>Check my GitHub</h4>
+                    </a>
+                    <a href="www.linkedin.com/in/robert-jimenez-75834234" class="contact-cards">
+                        <img src="./assets/images/linkedin-icon.png" alt="linked in icon">
+                        <h4>Find my LinkedIn</h4>
+                    </a>
+                </div>
             </section>
         </section>
     </body>
