update borders throughout, section heading underlines, and projects layout and borders

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                         <img src="./assets/images/run-buddy-still.jpg" />
                     </div>
                     <div class="small-card-container">
-                            <img src="./assets/images/run-buddy-still-blue.jpg" />
-                            <img src="./assets/images/run-buddy-still-green.jpg" />
-                            <img src="./assets/images/run-buddy-still-red.jpg" />
-                            <img src="./assets/images/run-buddy-still-dark.jpg" />                        
+                        <div><img src="./assets/images/run-buddy-still-blue.jpg" /></div>
+                        <div><img src="./assets/images/run-buddy-still-green.jpg" /></div>
+                        <div><img src="./assets/images/run-buddy-still-red.jpg" /></div>
+                        <div><img src="./assets/images/run-buddy-still-dark.jpg" /></div>
                     </div>
                 </div>
             </section>
