added opacity hover effect to project cards and created anchor elements on each card

--- a/index.html
+++ b/index.html
@@ -64,13 +64,31 @@
                 <h2>Projects</h2>
                 <div class="project-cards">
                     <div class="main-card">
-                        <img src="./assets/images/run-buddy-still.jpg" />
+                        <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
+                            <img src="./assets/images/run-buddy-still.jpg" />
+                        </a>
                     </div>
                     <div class="small-card-container">
-                        <div><img src="./assets/images/run-buddy-still-blue.jpg" /></div>
-                        <div><img src="./assets/images/run-buddy-still-green.jpg" /></div>
-                        <div><img src="./assets/images/run-buddy-still-red.jpg" /></div>
-                        <div><img src="./assets/images/run-buddy-still-dark.jpg" /></div>
+                        <div> 
+                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
+                                <img src="./assets/images/run-buddy-still-blue.jpg" />
+                            </a>                            
+                        </div>
+                        <div>
+                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
+                                <img src="./assets/images/run-buddy-still-green.jpg" />
+                            </a>                           
+                        </div>
+                        <div>
+                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
+                                <img src="./assets/images/run-buddy-still-red.jpg" />
+                            </a>                            
+                        </div>
+                        <div>
+                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
+                                <img src="./assets/images/run-buddy-still-dark.jpg" />
+                            </a>                            
+                        </div>
                     </div>
                 </div>
             </section>
