added responsive media queries for header and hero sections

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
             <section id="contact-me" class="contact-me">
                 <h2>Contact Me</h2>
                 <div class="contact-container">
-                    <a href="mailto:RJimenezTech@gmail.com" class="contact-cards" alt="email icon">
-                        <img src="./assets/images/email-icon.png" />
+                    <a href="mailto:RJimenezTech@gmail.com" class="contact-cards">
+                        <img src="./assets/images/email-icon.png" alt="email icon" />
                         <h4>Email me</h4>
                     </a>
-                    <a href="https://github.com/RJimenezTech" class="contact-cards" alt="github cat icon">
-                        <img src="./assets/images/github-cat-icon.png" />
+                    <a href="https://github.com/RJimenezTech" class="contact-cards" >
+                        <img src="./assets/images/github-cat-icon.png" alt="github cat icon" />
                         <h4>Check my GitHub</h4>
                     </a>
-                    <a href="www.linkedin.com/in/robert-jimenez-75834234" class="contact-cards">
-                        <img src="./assets/images/linkedin-icon.png" alt="linked in icon">
+                    <a href="https://www.linkedin.com/in/robert-jimenez-75834234/" class="contact-cards">
+                        <img src="./assets/images/linkedin-icon.png" alt="linked in icon" />
                         <h4>Find my LinkedIn</h4>
                     </a>
                 </div>
