update projects and contact me sections for responsiveness, added comments to CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./assets/images/cartoon-robert.jpg" alt="robert with a crown" />
                 </div>
                 
-                <div>
+                <div class="hero-text">
                     <h2>Hi, my name is <span>Robert Jimenez</span>.</h2>
                     <h2>I'm a web developer.</h2>
                 </div>
@@ -66,7 +66,7 @@
                     <div class="main-card">
                         <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                             <img src="./assets/images/run-buddy-still.jpg" />
-                        </a>
+                        </a>                        
                     </div>
                     <div class="small-card-container">
                         <div> 
