added labels to project thumbnails

--- a/index.html
+++ b/index.html
@@ -66,28 +66,33 @@
                     <div class="main-card">
                         <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                             <img src="./assets/images/run-buddy-still.jpg" />
-                        </a>                        
+                        </a> 
+                        <p>Run Buddy App</p>                         
                     </div>
                     <div class="small-card-container">
                         <div> 
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-blue.jpg" />
-                            </a>                            
+                            </a>    
+                            <p>Run Buddy Blue</p>                                              
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-green.jpg" />
-                            </a>                           
+                            </a>  
+                            <p>Run Buddy Green</p>                             
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-red.jpg" />
-                            </a>                            
+                            </a>  
+                            <p>Run Buddy Red</p>                              
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-dark.jpg" />
-                            </a>                            
+                            </a>  
+                            <p>Run Buddy Black</p>                              
                         </div>
                     </div>
                 </div>
