--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <img src="./assets/images/github-cat-icon.png" alt="github cat icon" />
                         <h4>Check my GitHub</h4>
                     </a>
-                    <a href="https://www.linkedin.com/in/robert-jimenez-75834234/" class="contact-cards">
+                    <a href="www.linkedin.com/in/RJimenezTech" class="contact-cards">
                         <img src="./assets/images/linkedin-icon.png" alt="linked in icon" />
                         <h4>Find my LinkedIn</h4>
                     </a>
