added image of Occasional Movie, linked this project to Projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section id="about-me" class="about-me">
                 <h2>About Me</h2>
                 <div class="about-me-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                    <p>I'm an inquisitive and motivated engineer that is coding-bootcamp trained with 10+ years of experience in manufacturing. I always seek to improve my backend dexterity while maintaining frontend skills.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
                 </div>
@@ -64,17 +64,17 @@
                 <h2>Projects</h2>
                 <div class="project-cards">
                     <div class="main-card">
-                        <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                            <img src="./assets/images/run-buddy-still.jpg" />
+                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
+                            <img src="./assets/images/occasional movie.png" />
                         </a> 
-                        <p>Run Buddy App</p>                         
+                        <p>Ocassional Movie</p>                         
                     </div>
                     <div class="small-card-container">
                         <div> 
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still-blue.jpg" />
+                                <img src="./assets/images/run-buddy-still.jpg" />
                             </a>    
-                            <p>Run Buddy Blue</p>                                              
+                            <p>Run Buddy App</p>                                              
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
