--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
                     </div>
                     <div class="small-card-container">
                         <div> 
-                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still.jpg" />
+                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank">
+                                <img src="./assets/images/weather-dashboard.png" />
                             </a>    
-                            <p>Run Buddy App</p>                                              
+                            <p>Weather Dashboard</p>                                              
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still-green.jpg" />
+                                <img src="./assets/images/run-buddy-still.jpg" />
                             </a>  
-                            <p>Run Buddy Green</p>                             
+                            <p>Run Buddy App</p>                             
                         </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
