updated about me section, remove lorem upsem text

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <section id="about-me" class="about-me">
                 <h2>About Me</h2>
                 <div class="about-me-text">
-                    <p>I'm an inquisitive and motivated engineer that is coding-bootcamp trained with 10+ years of experience in manufacturing. I always seek to improve my backend dexterity while maintaining frontend skills.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipsiscing elit, sed do esisud tempor incididunt ut labore et dolore magna aligqua. Ut enim ad minim venium, quis nostrud exervitation ullamco laboris nisi ut aligquip ex ea commodo consequat.</p>
+                    <p>I'm an inquisitive and motivated engineer that is coding-bootcamp trained with 10+ years of experience in manufacturing. I always seek to improve my backend dexterity while maintaining frontend skills. I've dabbled in coding and web/software development extensively in recent years. Check out my links below for more info!</p>
+                    <p>Currently working as Safety Engineer, conducting safety audits, training, and designing safety features for machines in the gasket manufacturing industry. I am very familiar with OSHA compliance, safety training, and changing culture as an organization to meet our business goals. I also have substantial rubber processing and rubber mold design in the oil and gas industry.</p>
+                    <p>My endless curiosity has taken me to the rubber molding industry, safety and compliance roles, and the future looks bright. Because I'm a habitual learner, Language Learning (human languages!) has become a large part of my personal life as a way to connect with people and adjust my interpretation of the world. Having learned Spanish to an intermediate level as an adult, I caught the language learning bug, currently dabbling in Modern Standard Arabic. On my list of future languages that I want to study: Swahili, French, Mandarin Chinese, and American Sign Language.</p>
                 </div>
                 
             </section>
@@ -46,7 +46,7 @@
                         <h3>Education</h3>
                         <ul>
                             <li>Full-stack Web Dev Bootcamp (Rice '22)</li>
-                            <li>BS Mechanical Engineering (UT-Austin '11)</li>
+                            <li>B.S. Mechanical Engineering (UT-Austin '11)</li>
                         </ul>    
                     </div>
                     <div class="resume-half">
