remove placeholder images, added workday-scheduler proj

--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                 <h2>Projects</h2>
                 <div class="project-cards">
                     <div class="main-card">
-                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
+                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank" alt="find a movie project">
                             <img src="./assets/images/occasional movie.png" />
                         </a> 
                         <p>Ocassional Movie</p>                         
                     </div>
                     <div class="small-card-container">
                         <div> 
-                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank">
+                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank" alt="weather dashboard project">
                                 <img src="./assets/images/weather-dashboard.png" />
                             </a>    
                             <p>Weather Dashboard</p>                                              
                         </div>
                         <div>
-                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still.jpg" />
+                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank" alt="workday scheduler project">
+                                <img src="./assets/images/screengrab on load.png" />
                             </a>  
-                            <p>Run Buddy App</p>                             
+                            <p>Workday Scheduler</p>                             
                         </div>
-                        <div>
+                        <!-- <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-red.jpg" />
                             </a>  
@@ -92,7 +92,7 @@
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-dark.jpg" />
                             </a>  
-                            <p>Run Buddy Black</p>                              
+                            <p>Run Buddy Black</p>                               -->
                         </div>
                     </div>
                 </div>
