--- a/index.html
+++ b/index.html
@@ -67,20 +67,27 @@
                         <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank" alt="find a movie project">
                             <img src="./assets/images/occasional movie.png" />
                         </a> 
-                        <p>Ocassional Movie</p>                         
+                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
+                            <p>Ocassional Movie</p>
+                        </a> 
+                                              
                     </div>
                     <div class="small-card-container">
                         <div> 
-                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank" alt="weather dashboard project">
-                                <img src="./assets/images/weather-dashboard.png" />
+                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank" >
+                                <img src="./assets/images/weather-dashboard.png" alt="weather dashboard project"/>
                             </a>    
-                            <p>Weather Dashboard</p>                                              
+                            <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank">
+                                <p>Weather Dashboard</p>
+                            </a>                                                
                         </div>
                         <div>
-                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank" alt="workday scheduler project">
-                                <img src="./assets/images/screengrab on load.png" />
+                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank">
+                                <img src="./assets/images/screengrab on load.png" alt="workday scheduler project"/>
                             </a>  
-                            <p>Workday Scheduler</p>                             
+                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank">
+                                <p>Workday Scheduler</p>
+                            </a>                              
                         </div>
                         <!-- <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
