add full-stack to jumbo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
                 <div class="hero-text">
                     <h2>Hi, my name is <span>Robert Jimenez</span>.</h2>
-                    <h2>I'm a web developer.</h2>
+                    <h2>I'm a full-stack web developer.</h2>
                 </div>
             </section>
 
