--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="content">
             <section id="hero" class="hero">
                 <div class="hero-image">
-                    <img src="./assets/images/cartoon-robert.jpg" alt="robert with a crown" />
+                    <img src="./assets/images/headshot.jpg" alt="robert with a crown" />
                 </div>
                 
                 <div class="hero-text">
