removed daily schedule, added habitual tracker

--- a/index.html
+++ b/index.html
@@ -64,16 +64,23 @@
                 <h2>Projects</h2>
                 <div class="project-cards">
                     <div class="main-card">
-                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank" alt="find a movie project">
-                            <img src="./assets/images/occasional movie.png" />
+                        <a href="http://habitualtracker.herokuapp.com/" target="_blank" alt="find a movie project">
+                            <img src="./assets/images/habitual-tracker.png" />
                         </a> 
-                        <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
-                            <p>Ocassional Movie</p>
+                        <a href="http://habitualtracker.herokuapp.com/" target="_blank">
+                            <p>Habit Tracker</p>
                         </a> 
                                               
                     </div>
                     <div class="small-card-container">
-                        <div> 
+                        <div>
+                            <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
+                                <img src="./assets/images/occasional movie.png" alt="workday scheduler project"/>
+                            </a>  
+                            <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
+                                <p>Movie Finder</p>
+                            </a>                              
+                        </div><div> 
                             <a href="https://rjimeneztech.github.io/weather-dashboard/" target="_blank" >
                                 <img src="./assets/images/weather-dashboard.png" alt="weather dashboard project"/>
                             </a>    
@@ -81,14 +88,7 @@
                                 <p>Weather Dashboard</p>
                             </a>                                                
                         </div>
-                        <div>
-                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank">
-                                <img src="./assets/images/screengrab on load.png" alt="workday scheduler project"/>
-                            </a>  
-                            <a href="https://rjimeneztech.github.io/workday-scheduler/" target="_blank">
-                                <p>Workday Scheduler</p>
-                            </a>                              
-                        </div>
+
                         <!-- <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy-still-red.jpg" />
