added node and express to tech section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <div class="resume-half">
                         <h3>Technologies</h3>
                         <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
+                            <li>HTML, CSS</li>
                             <li>JavaScript</li>
+                            <li>Node, Express</li>
                         </ul>   
                     </div>                   
                 </div>
