--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <h2>Projects</h2>
                 <div class="project-cards">
                     <div class="main-card">
-                        <a href="http://habitualtracker.herokuapp.com/" target="_blank" alt="find a movie project">
-                            <img src="./assets/images/habitual-tracker.png" />
+                        <a href="https://tweezer-app.herokuapp.com//" target="_blank" alt="twitter clone app">
+                            <img src="./assets/images/tweezer-app.png" />
                         </a> 
                         <a href="http://habitualtracker.herokuapp.com/" target="_blank">
                             <p>Habit Tracker</p>
@@ -73,6 +73,14 @@
                                               
                     </div>
                     <div class="small-card-container">
+                        <div>
+                            <a href="http://habitualtracker.herokuapp.com/" target="_blank" alt="find a movie project">
+                                <img src="./assets/images/habitual-tracker.png" />
+                            </a> 
+                            <a href="http://habitualtracker.herokuapp.com/" target="_blank">
+                                <p>Habit Tracker</p>
+                            </a>              
+                        </div>
                         <div>
                             <a href="https://rjimeneztech.github.io/MovieFinder/" target="_blank">
                                 <img src="./assets/images/occasional movie.png" alt="workday scheduler project"/>
@@ -88,6 +96,7 @@
                                 <p>Weather Dashboard</p>
                             </a>                                                
                         </div>
+
 
                         <!-- <div>
                             <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
@@ -116,7 +125,7 @@
                         <img src="./assets/images/github-cat-icon.png" alt="github cat icon" />
                         <h4>Check my GitHub</h4>
                     </a>
-                    <a href="www.linkedin.com/in/RJimenezTech" class="contact-cards">
+                    <a href="https://www.linkedin.com/in/rjimeneztech/" class="contact-cards">
                         <img src="./assets/images/linkedin-icon.png" alt="linked in icon" />
                         <h4>Find my LinkedIn</h4>
                     </a>
