--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <title>Portfolio | Robert Jimenez</title>
+    </head>
     <body>
-        <head>
-            <meta charset="UTF-8" />
-            <link rel="stylesheet" href="./assets/css/style.css" />
-            <title>Portfolio | Robert Jimenez</title>
-        </head>
         <header class="header">
             <h1>Robert Jimenez</h1>
             <nav class="nav">
@@ -96,20 +97,6 @@
                                 <p>Weather Dashboard</p>
                             </a>                                                
                         </div>
-
-
-                        <!-- <div>
-                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still-red.jpg" />
-                            </a>  
-                            <p>Run Buddy Red</p>                              
-                        </div>
-                        <div>
-                            <a href="https://rjimeneztech.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/run-buddy-still-dark.jpg" />
-                            </a>  
-                            <p>Run Buddy Black</p>                               -->
-                        </div>
                     </div>
                 </div>
             </section>
@@ -117,20 +104,21 @@
             <section id="contact-me" class="contact-me">
                 <h2>Contact Me</h2>
                 <div class="contact-container">
-                    <a href="mailto:RJimenezTech@gmail.com" class="contact-cards">
+                    <a href="mailto:RJimenezTech@gmail.com" class="contact-cards" target="_blank">
                         <img src="./assets/images/email-icon.png" alt="email icon" />
                         <h4>Email me</h4>
                     </a>
-                    <a href="https://github.com/RJimenezTech" class="contact-cards" >
+                    <a href="https://github.com/RJimenezTech" class="contact-cards" target="_blank">
                         <img src="./assets/images/github-cat-icon.png" alt="github cat icon" />
                         <h4>Check my GitHub</h4>
                     </a>
-                    <a href="https://www.linkedin.com/in/rjimeneztech/" class="contact-cards">
+                    <a href="https://www.linkedin.com/in/rjimeneztech/" class="contact-cards" target="_blank">
                         <img src="./assets/images/linkedin-icon.png" alt="linked in icon" />
                         <h4>Find my LinkedIn</h4>
                     </a>
                 </div>
             </section>
         </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
